2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/tools/gimplevelstool.c: unset the active color picker when
	the dialog is unmapped. Fixes bug #451272.

	* app/tools/gimpimagemaptool.c: formatting.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c
	* app/widgets/gimpimageprofileview.[ch]: show comment and color
	profile in text views instead of using labels. Deals much better
	with longer texts.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimagepropview.c
	(gimp_image_prop_view_label_set_filename): set the full name as
	tooltip.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-resize.c: applied patch from Geert
	Jordaens that reimplements the algorithm to determine the largest
	rectangle. Fixes bug #412473.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* configure.in: removed extra check for gthread and fold it into
	the GLIB and GTK checks.

	* */Makefile.am: changed accordingly.

	* app/main.c (main): always call g_thread_init().

2007-06-25  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.c: if the wire protocol is used without
	prior initialization, abort with g_error() instead of crashing.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.c (gradmap_tile_validate): initialize
	the destination pixel region properly. Fixes bug #450291.

2007-06-25  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpiscissorstool.c (gradmap_tile_validate)
	(find_max_gradient) minor code cleanup.

2007-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/newsprint.c (newsprint_dialog): corrected spacing.

2007-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/align_layers.c: set the minimum grid size to 1.
	Fixes bug #450001.

2007-06-22  Martin Nordholts  <martinn@svn.gnome.org>

	* app/core/gimpprojection-construct.c (gimp_projection_initialize):
	Only consider layers with combine mode Normal when testing if any